<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyApp</string>
    <string name="main_bottom_home_page">首页</string>
    <string name="main_bottom_assortment">分类</string>
    <string name="main_bottom_shopping_cart">购物车</string>
    <string name="main_bottom_order_form">订单</string>
    <string name="main_bottom_my">我的</string>
    <string name="main_group_view_right">更多 </string>
    <string name="home_page_recommend">今日推荐</string>
    <string name="home_page_service_facilitator">服务商</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_recommend_service">----------  推荐服务商  ----------</string>
    <string name="title_activity_recommend_service">RecommendServiceActivity</string>
    <string name="activity_recommend_service">推荐服务商</string>
    <string name="order_form_all">全部</string>
    <string name="order_form_obligation">待付款</string>
    <string name="order_form_untreated">未处理</string>
    <string name="order_form_under_way">进行中</string>
    <string name="order_form_assess">待评价</string>
    <string name="order_form_no_order">亲，您还没有订单</string>
    <string name="shopping_empty_text">您还什么都没买呢</string>
    <string name="shopping_empty_button">去逛逛</string>
    <string name="shopping_total">合计：</string>
    <string name="shopping_free">（免费上门）</string>
    <string name="shopping_pay">去结算</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_buy">我常买</string>
    <string name="my_address">常用地址</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_coupons">我的代金券</string>
    <string name="my_shop">商家入驻</string>
    <string name="my_more">更多</string>
    <string name="home_empty">请检查网络连接</string>
    <string name="home_internet">重新连接</string>
    <string name="collection_top">我的收藏</string>
</resources>
