<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context="com.qianfeng.android.myapp.fragment.OrderFormFragment">

    <!-- TODO: Update blank fragment layout -->

<LinearLayout
   android:layout_marginTop="2dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="@dimen/title_height">

    <TextView
        android:text="@string/order_form_all"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent" />
    <View
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"/>

    <TextView
        android:text="@string/order_form_obligation"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent" />
    <View
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <TextView
        android:text="@string/order_form_untreated"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent" />
    <View
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <TextView
        android:text="@string/order_form_under_way"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent" />
    <View
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"/>
    <TextView
        android:text="@string/order_form_assess"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="match_parent" />


</LinearLayout>

    <ImageView
        android:id="@+id/order_form_iv_show"
        android:layout_centerInParent="true"
        android:src="@drawable/img_my_order_no_order"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:layout_below="@id/order_form_iv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_form_no_order"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
