<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <FrameLayout
        android:id="@+id/main_radio_lay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        >
    <RadioGroup
        android:id="@+id/main_bottom_rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingTop="5dp"
        >

        <RadioButton
            android:id="@+id/main_bottom_home_rb"
            style="@style/main_bottom_radio_button"
            android:checked="true"
            android:drawableTop="@drawable/slt_main_bottom_home_page"
            android:text="@string/main_bottom_home_page" />

        <RadioButton
            android:id="@+id/main_bottom_assortment_rb"
            style="@style/main_bottom_radio_button"
            android:drawableTop="@drawable/slt_main_bottom_assortment"
            android:text="@string/main_bottom_assortment" />

        <RadioButton
            android:id="@+id/main_bottom_shopping_rb"
            style="@style/main_bottom_radio_button"
            android:drawableTop="@drawable/slt_main_bottom_shopping_cart"
            android:text="@string/main_bottom_shopping_cart"
            android:checked="false" />

        <RadioButton
            android:id="@+id/main_bottom_order_form_rb"
            style="@style/main_bottom_radio_button"
            android:drawableTop="@drawable/slt_main_bottom_order_form"
            android:text="@string/main_bottom_order_form" />

        <RadioButton
            android:id="@+id/main_bottom_my_rb"
            style="@style/main_bottom_radio_button"
            android:drawableTop="@drawable/slt_main_bottom_my"
            android:text="@string/main_bottom_my" />
    </RadioGroup>
    <TextView
        android:layout_marginLeft="12dp"
        android:id="@+id/main_shopping_cart_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@drawable/shapecount"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#ffffffff"
        android:textSize="10sp"
        android:text="5"
        android:visibility="invisible"
        />
    </FrameLayout>
    <View
        android:layout_above="@id/main_radio_lay"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />

    <Button
        android:id="@+id/main_top_address_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_height"
        android:background="@null"
        android:onClick="onClick"
        android:drawableLeft="@drawable/img_me_address"
        android:drawableRight="@drawable/home_img_city_arraw_black" />

    <Button
        android:id="@+id/main_top_msg_btn"
        android:layout_width="@dimen/title_height"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:background="@null"
        android:drawableLeft="@drawable/btn_title_msg" />


    <Button
        android:id="@+id/main_top_search_btn"
        android:layout_width="@dimen/title_height"
        android:layout_height="@dimen/title_height"
        android:layout_toLeftOf="@+id/main_top_msg_btn"
        android:background="@null"
        android:onClick="onClick"
        android:drawableLeft="@drawable/btn_title_search" />

    <TextView
        android:id="@+id/main_top_tv_show"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/big_text_size"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_height" />

    <FrameLayout
        android:layout_below="@id/main_top_search_btn"
        android:id="@+id/main_content_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_radio_lay"
        android:background="@color/backColor"
     />


</RelativeLayout>
